--- a/ShoppingListApp/package.json
+++ b/ShoppingListApp/package.json
@@ -10,8 +10,11 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@types/react": "^18.0.17",
+    "@types/react-native": "^0.69.5",
     "react": "18.0.0",
-    "react-native": "0.69.4"
+    "react-native": "0.69.4",
+    "typescript": "^4.7.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
